# String_library

./: .gitignore  CMakeLists.txt  input.txt  main.c  my_str_t.c  my_str_t.h  string_lib.c  string_lib.h
cpp_string/: CMakeLists.txt  MyString.cpp  MyString.h  main.cpp
google_tests/: CMakeLists.txt  test.cpp
